# hotel-booking

./: .dockerignore  .env.example  .gitignore  Dockerfile  Justfile  Makefile  README.md  alembic.ini  compose.yaml  pyproject.toml  start_api.sh  start_command.sh  start_http_server.sh
docker/: app.compose.yaml  storage.compose.yaml
migrations/: env.py
migrations/versions/: 2025_09_19_1932-87b2e489aa10_user.py  2025_09_21_2030-2a1c9a0ce014_user.py  2025_09_24_1918-d630f4b82418_user_add_is_superuser.py  2025_09_24_2225-1de12e2d48b3_hoteladmin.py  2025_09_26_1428-16a2e42d9814_remove_hotel_admins_update_user.py  2025_10_08_1031-c1dbb95bf9af_add_hotels.py  2025_10_15_1149-7fcfe63908f0_hotels.py
src/: run_cli.py  run_http.py
src/app/: all_models.py  cli.py  container.py  http_server.py  models_registry.py  rest_api.py
src/app/cli/: __main__.py  container.py  run.py
src/app/http_server/: __main__.py  container.py  controllers.py  docs.py  error_handlers.py  errors_handlers.py  handlers.py  router.py  run.py
src/bootstrap/: cli.py  config.py  container.py  db.py  env.py  models_registry.py  providers.py
src/bootstrap/config/: __init__.py  sa.py
src/bootstrap/http_server/: error_handlers.py  run.py
src/contexts/auth/: di.py
src/contexts/auth/api/: http_router.py  http_schemas.py
src/contexts/auth/app/: errors.py  use_cases.py
src/contexts/auth/core/: dtos.py  errors.py  gateways.py  services.py  use_cases.py
src/contexts/hotel_admins/: di.py
src/contexts/users/: db_models.py  di.py  repositories.py
src/core/: repositories.py
src/core/db/: domains.py  models.py
src/core/domain/: entity.py  exceptions.py
src/kernel/: db_session.py  di.py  env.py
src/kernel/security/: services.py
src/kernel/seedwork/: value_object.py
src/providers/: db.py  env.py
src/seedwork/: entity.py
src/shared/: utils.py
src/shared/api/: click_di.py  fastapi_di.py
src/shared/app/: errors.py  interfaces.py
src/shared/core/: errors.py  interfaces.py  value.py  value_object.py
src/shared/infra/: db_domains.py  db_models.py  models.py  repositories.py  services.py
src/shared/providers/: db.py  env.py  security.py
src/system/: db_session.py  di.py
src/system/security/: fastapi.py  services.py
src/tech/: db_session.py  di.py
src/tech/security/: dtos.py  errors.py
tests/: conftest.py
tests/core/domain/: entity.py  value.py
tests/shared/core/: entity.py  value.py
tests/system/seedwork/: entity.py
tests/unit/seedwork/: value.py
tests/unit/shared/: entity.py  value.py
(+84 files in other folders)
