[project]
name = "hotel-booking"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "dishka>=1.7.1",
    "fastapi[standard]>=0.116.2",
    "phonenumberslite>=9.0.14",
    "pydantic-settings>=2.10.1",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.43",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "faker>=37.8.0",
    "pytest>=8.4.2",
]

# Ruff configuration

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv", "__pycache__", ".git", ".mypy_cache", "docker"]

[tool.ruff.lint.isort]
known-first-party = ["src.app", "src.contexts", "src.core", "src.providers"]
combine-as-imports = true
force-sort-within-sections = true
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

# Tests

[tool.pytest.ini_options]
python_files = "*.py"
python_functions = ["test_*", "check_*", "*_test"]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra -q"
